# file_share

./: Cargo.toml
src/: cli.rs  config.rs  daemon.rs  main.rs  utils.rs
src/core/: mod.rs
src/daemon/: client.rs  daemon.rs  mod.rs  protocol.rs  server.rs
src/network/: io.rs  mod.rs  protocol.rs  server.rs  tls.rs
src/settings/: cli.rs  config.rs  mod.rs
src/utils/: file_operations.rs
