[package]
name = "file_share"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.99"
tokio = { version = "1.47.1", features = ["full"] }
clap = { version = "4.5.46", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"