[package]
name = "file_share"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.99"
tokio = { version = "1.47.1", features = ["full"] }
clap = { version = "4.5.46", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
daemonize = "0.5.0"
libc = "0.2.175"
rustls = "0.23.32"
tokio-rustls = "0.26.4"
