[package]
name = "file_share"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.99"
tokio = { version = "1.47.1", features = ["full"] }
clap = { version = "4.5.46", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
daemonize = "0.5.0"
libc = "0.2.175"
rustls = "0.23.32"
tokio-rustls = "0.26.4"
rustls-pemfile = "2.2.0"
rcgen = "0.13"
blake3 = "1.8.2"
async-compression = { "version" = "0.4", features = ["tokio", "zstd"] }
